# adventofcode

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: workflow.yml
aoc2022/: day1.py
aoc2023/: day1.py  day13.py  day14.py  day15.py  day16.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
