[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Neil Parker <nparker2172@gmail.com>"]
description = ""
name = "adventofcode"
packages = [{"include" = "aoc2022"}, {"include" = "aoc2023"}]
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ruff = "^0.1.6"
